style : 람다식에서 사용하는 변수명 직관적으로 변경 및 미사용 import 제거