@@ -3,7 +3,6 @@ package domain;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 public enum Bridge {
 
@@ -19,8 +18,8 @@ public enum Bridge {
 
     public static Bridge getBy(final boolean exist) {
         final List<Bridge> matchedBridge = Arrays.stream(values())
-                .filter(value -> value.exist == exist)
-                .collect(Collectors.toList());
+                .filter(bridge -> bridge.exist == exist)
+                .toList();
 
         if (matchedBridge.size() != MATCHED_BRIDGE_COUNT) {
             throw new IllegalStateException("Bridge를 찾을 수 없거나 중복되는 값이 존재합니다.");
